--- a/i18n/locale_tr.xml
+++ b/i18n/locale_tr.xml
@@ -59,7 +59,7 @@
         <text name="guidanceSteering_setting_scopeTrackFarmId" text="Rotayı çiftliğe kaydedin"/>
         <text name="guidanceSteering_tooltip_scopeTrackFarmId" text="Rotayı aracın sahibi olan çiftliğe kaydedin. (Değiştirilmezse rotaya herkesin erişimi olacaktır.)"/>
 
-        <text name="guidanceSteering_setting_offsetLines" text="Şerit yüksekliği"/>
+        <text name="guidanceSteering_setting_offsetLines" text="Şerit çizgilerinin yüksekliği"/>
         <text name="guidanceSteering_tooltip_offsetLines" text="Bu ayar ile şeritlerin görünmediği bölgelerde yüksekliğini ayarlayabilirsiniz."/>
 
         <!--Warning tooltip-->
@@ -70,7 +70,7 @@
         <text name="guidanceSteering_setting_showLines" text="Şeritleri göster"/>
         <text name="guidanceSteering_setting_terrainAngleSnap" text="Arazi eğimine sabitle"/>
         <text name="guidanceSteering_setting_enableGuidanceSteering" text="Şerit desteğini aktifleştir"/>
-        <text name="guidanceSteering_setting_autoInvertOffset" text="Offset reversal"/>
+        <text name="guidanceSteering_setting_autoInvertOffset" text="Sapmayı otomatik aynala"/>
         <text name="guidanceSteering_setting_width" text="Genişlik"/>
         <text name="guidanceSteering_setting_widthIncrement" text="Genişlik ayarlaması"/>
         <text name="guidanceSteering_setting_offsetIncrement" text="Sapma ayarlaması"/>
@@ -97,7 +97,7 @@
         <text name="guidanceSteering_setting_headlandMode" text="Çevre modu"/>
         <text name="guidanceSteering_tooltip_headlandMode" text="Çevre modu ile tarlanın çevresinde nasıl bir taktik izleyeceğinizi seçebilirsiniz."/>
 
-        <text name="guidanceSteering_setting_headlandDistance" text="Çevre etkileşim mesafesi"/>
+        <text name="guidanceSteering_setting_headlandDistance" text="Çevreye kalan mesafe"/>
         <text name="guidanceSteering_tooltip_headlandDistance" text="Tarla çevresine ulaşmadan önce etkileşime geçilecek mesafe."/>
 
         <text name="guidanceSteering_headland_mode_0" text="Kapalı"/>
